--- a/app/src/main/res/layout/discover_layout.xml
+++ b/app/src/main/res/layout/discover_layout.xml
@@ -22,6 +22,7 @@
             android:src="@drawable/donut"/>
 
         <TextView
+            android:id="@+id/txt_explore"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Donuts"
