--- a/app/src/main/res/layout/cakes_layout.xml
+++ b/app/src/main/res/layout/cakes_layout.xml
@@ -46,6 +46,7 @@
                 android:text="Sponge Cakes"
                 android:textSize="10sp"
                 android:textStyle="bold"
+                android:layout_marginStart="50dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
